manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-image-generator
  namespace: release-image-generator
  labels:
    app: release-image-generator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-image-generator
  template:
    metadata:
      labels:
        app: release-image-generator
    spec:
      containers:
        - name: release-image-generator
          image: "trueberryless/release-image-generator:0.1.0"
          imagePullPolicy: Always
