manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-image-generator
  namespace: release-image-generator
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: release-image-generator
  ports:
    - name: http
      port: 80
