manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-image-generator
  namespace: release-image-generator
spec:
  rules:
    - host: release-image-generator.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-image-generator
                port:
                  number: 80

  tls:
    - hosts:
        - release-image-generator.trueberryless.org
      secretName: release-image-generator
